# dorkydad

./: LICENSE  png_to_3mf_multicolor.py  png_to_stl.py
earring_app/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  processing.py  pyproject.toml
earring_app/docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md
earring_app/static/: style.css
earring_app/templates/: base.html  download.html  index.html  preview.html
earring_app/tests/: conftest.py  test_app.py  test_processing.py
earring_app/uploads/193c127728479973860eeee1ef8f781d/: earring.3mf
earring_app/uploads/55e4e9712016059da1577f6737dad780/: palette.json
earring_app/uploads/8d3a58affa4fde68e4e5c9bb6878a559/: original
