[project]
name = "earring-maker"
version = "1.0.0"
description = "Multicolor 3MF earring generator web app"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "trimesh>=4.0",
    "mapbox-earcut>=1.0",
    "shapely>=2.0",
    "cairosvg>=2.7",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
earring-maker = "app:app"
